collapsible-5.css: collapsed div gets overflow:hidden.

--- a/code/collapsible/collapsible-5.css
+++ b/code/collapsible/collapsible-5.css
@@ -22,6 +22,9 @@
 [cbc="expanded"]:before {
     background-image: url("orange-minus.svg") ;
 	}
+[cbc="collapsed"] + div {
+	overflow : hidden ;
+	}
 [cbc="collapsed"]:before {
     background-image : url("orange-plus.svg") ;
 	}
